Setting up to make a package - First draft of files and contents

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,15 @@
-include setup.py
-include MANIFEST.in
-include LICENSE
-include README.md
-
-graft tests
-graft examples
-graft docs
-graft src
+include example/event_poll.py
+include example/hello_world1.py
+include example/hello_world2.py
+include example/hello_world3.py
+include example/hello_world4.py
+include artifacts/HelloWorld1.abi
+include artifacts/HelloWorld1.bin
+include artifacts/HelloWorld2.abi
+include artifacts/HelloWorld2.bin
+include artifacts/HelloWorld3.abi
+include artifacts/HelloWorld3.bin
+include artifacts/HelloWorld4.abi
+include artifacts/HelloWorld4.bin
+include artifacts/Test.abi
+include artifacts/Test.bin
