--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
-include example/event_poll.py
-include example/hello_world1.py
-include example/hello_world2.py
-include example/hello_world3.py
-include example/hello_world4.py
+include examples/event_poll.py
+include examples/hello_world1.py
+include examples/hello_world2.py
+include examples/hello_world3.py
+include examples/hello_world4.py
 include artifacts/HelloWorld1.abi
 include artifacts/HelloWorld1.bin
 include artifacts/HelloWorld2.abi
