setup.py - New version number
.gitignore
- Undo a few changes in last update. Put back some of the ignores.
- Add a few new ignores for files/dirs that don't need to be public.
- Still learning....

artifacts directory
- Remove files belonging to club.sol. It is now longer being
  included.

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,19 @@
 *.pyc
 *.swo
 *.swp
+*.whl
 *.zip
 .git/
-.idea/
+artifacts/TestNeverDeployed.*
+build
+dist
+docs/build
+docs/images
 docs/source/_static
 docs/source/_templates
 env/
+simpleth.egg-info
 solc/
-/tools/.mypy_cache/.gitignore
+src/contracts/TestNeverDeployed.sol
+/.mypy_cache/.gitignore
 /tools/.mypy_cache/CACHEDIR.TAG
