setup.py - New version number
.gitignore
- Undo a few changes in last update. Put back some of the ignores.
- Add a few new ignores for files/dirs that don't need to be public.
- Still learning....

artifacts directory
- Remove files belonging to club.sol. It is no longer being
  included as a simpleth example.

--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,11 @@
 *.whl
 *.zip
 .git/
-artifacts/TestNeverDeployed.*
+.idea
 build
 dist
-docs/build
-docs/images
-docs/source/_static
-docs/source/_templates
 env/
 simpleth.egg-info
 solc/
-src/contracts/TestNeverDeployed.sol
 /.mypy_cache/.gitignore
 /tools/.mypy_cache/CACHEDIR.TAG
