setup.py - New version number
.gitignore
- Undo a few changes in last update. Put back some of the ignores.
- Add a few new ignores for files/dirs that don't need to be public.
- Append '/' to the directories listed.
- Still learning....

artifacts directory
- Remove files belonging to club.sol. It is no longer being
  included as a simpleth example.

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,11 @@
 *.whl
 *.zip
 .git/
-.idea
-build
-dist
+.idea/
+build/
+dist/
 env/
-simpleth.egg-info
+simpleth.egg-info/
 solc/
 /.mypy_cache/.gitignore
 /tools/.mypy_cache/CACHEDIR.TAG
