Add web3 requirement to RtD yaml file - I need to add web3 as a requirement
setup.py
- New version number

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,10 +2,9 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
 
-# Set the version of Python and other tools you might need
-# sn - set Python to the latest level available.
 python:
   version: "3.8"
+  install:
+    - requirements: web3
